--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en-US">
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Title</title> <!-- Title that appears in tab -->
+</head>
+
+<body>
+
+    <nav>
+        <ul>
+            <li> <a href="index.html">Home</a></li>
+            <li> <a href="selected_workds.html">Selected Workds</a></li>
+        </ul>
+    </nav>
+
+    <h1>
+        Seth Gerberding <br> Mathematics Ph.D. Student at Texas&nbsp;A&amp;M&nbsp;University
+    </h1>
+
+    <h2> Personal Statement </h2>
+    <p>
+        My passion is solving problems with mathematics. Since the time of Newton, mathematics
+        has proven to be the most powerful method of framing, thinking, and then unraveling, the difficult 
+        problems we face. The future I envision is one where mathematics does to other fields what it did with physics. 
+        Thus, my interests lie in all mathematics, in all fields, and in all forms.
+    </p>
+
+    <h2>About</h2>
+    <ul>
+        <li>Year: Fourth </li>
+        <li>Research Interests: Numerical Analysis, finite element methods, conservation laws, dispersive PDEs,
+            mathematical biology, dynamical systems, verification </li>
+        <li>Advisor: Jean-Luc Guermond </li>
+    </ul>
+
+
+    <h2>Contact</h2>
+    <ul>
+        <li>
+            Email: <a href="mailto:gerbeset1997@tamu.edu">gerbeset1997@tamu.edu</a>
+        </li>
+    </ul>
+
+
+</body>
+
+
+</html>
