Added meat to selected_works

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title> <!-- Title that appears in tab -->
+    <title>Seth J. Gerberding</title> <!-- Title that appears in tab -->
 </head>
 
 <body>
@@ -20,12 +20,9 @@
         Seth Gerberding <br> Mathematics Ph.D. Student at Texas&nbsp;A&amp;M&nbsp;University
     </h1>
 
-    <h2> Personal Statement </h2>
+    <h2> Personal Statement: </h2>
     <p>
-        My passion is solving problems with mathematics. Since the time of Newton, mathematics
-        has proven to be the most powerful method of framing, thinking, and then unraveling, the difficult 
-        problems we face. The future I envision is one where mathematics does to other fields what it did with physics. 
-        Thus, my interests lie in all mathematics, in all fields, and in all forms.
+
     </p>
 
     <h2>About</h2>
@@ -33,7 +30,8 @@
         <li>Year: Fourth </li>
         <li>Research Interests: Numerical Analysis, finite element methods, conservation laws, dispersive PDEs,
             mathematical biology, dynamical systems, verification </li>
-        <li>Advisor: Jean-Luc Guermond </li>
+        <li>Advisor: <a href="https://people.tamu.edu/~guermond/">Dr.
+                Jean-Luc Guermond</a> </li>
     </ul>
 
 
