--- a/selected_works.html
+++ b/selected_works.html
@@ -8,4 +8,47 @@
             <li> <a href="selected_workds.html">Selected Workds</a></li>
         </ul>
     </nav>
+
+    <h1>
+        Reveiwed Papers:
+    </h1>
+    <ul>
+        <li>
+            Seth Gerberding, Nida Obatake, Anne Shiu. <a
+                href="https://www.tandfonline.com/doi/abs/10.1080/03081087.2020.1812497">Identifiability of linear
+                compartmental models: The effect of moving inputs, outputs, and leaks.</a> <em> Linear and Multilinear
+                Algebra</em>. (2020) doi.org/10.1080/03081087.2020.1812497 (<a> href=
+                "https://arxiv.org/pdf/1910.13549v2.pdf">reprint</a>)
+        </li>
+    </ul>
+
+
+    <h2>Technical Reports:</h2>
+    <ul>
+        <li>
+            Seth Gerberding and Benjamin Musick. Verification & Validation of a New Equation of State Framework in
+            xRAGE. <em>Los Alamos National Laboratory</em>. 2023 (<a href="selected_works/LA-UR-23-29866.pdf">pdf</a>)
+        </li>
+    </ul>
+
+    <h3>Other publications:</h3>
+    <ul>
+        <li>
+            Undergraduate thesis in philosophy: <a href="https://red.library.usd.edu/honors-thesis/84/">Plato's Ban: Why
+                the Poets are Exiled</a>
+            <ul>
+                <li>
+                    Thesis was awarded <em>High Distinction</em> by the USD Honors Committee. Advisors may nominate for
+                    <em>distinction</em>, and the committee may award <em>high distinction</em> at their discretion.
+                </li>
+            </ul>
+        </li>
+        <li>
+            Undergraduate thesis in mathematics: <a href="https://red.library.usd.edu/honors-thesis/76/">Groups of
+                Divisibility</a>
+        </li>
+    </ul>
+
+
+
 </body>
