--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="selected_works.html">Selected Workds</a></li>
+            <li> <a href="selected_works.html">Selected Works</a></li>
         </ul>
     </nav>
 
