--- a/selected_works.html
+++ b/selected_works.html
@@ -5,7 +5,7 @@
     <nav>
         <ul>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="selected_works.html">Selected Workds</a></li>
+            <li> <a href="selected_works.html">Selected Works</a></li>
         </ul>
     </nav>
 
