--- a/selected_works.html
+++ b/selected_works.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 
 <body>
-
     <nav>
         <ul>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="selected_works.html">Selected Works</a></li>
+            <li> <a href="software.html">Software & Codes</a></li>
+            <li> <a href="for_professionals.html">For Employers</a></li>
         </ul>
     </nav>
 
@@ -23,7 +24,7 @@
     </ul>
 
 
-    <h2>Technical Reports:</h2>
+    <h1>Technical Reports:</h1>
     <ul>
         <li>
             Seth Gerberding and Benjamin Musick. Verification & Validation of a New Equation of State Framework in
@@ -31,7 +32,7 @@
         </li>
     </ul>
 
-    <h3>Other publications:</h3>
+    <h1>Other publications:</h1>
     <ul>
         <li>
             Undergraduate thesis in philosophy: <a href="https://red.library.usd.edu/honors-thesis/84/">Plato's Ban: Why
