--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
         <ul>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="selected_works.html">Selected Works</a></li>
+            <li> <a href="software.html">Software & Codes</a></li>
+            <li> <a href="for_professionals.html">For Employers</a></li>
         </ul>
     </nav>
 
     <h1>
-        Seth Gerberding <br> Mathematics Ph.D. Student at Texas&nbsp;A&amp;M&nbsp;University
+        Seth Gerberding <br> Mathematics Ph.D. Student at Texas&nbsp;A&amp;M&nbsp;University<sup><a
+                href="#footnote">1</a></sup>
     </h1>
 
-    <h2> Personal Statement: </h2>
-    <p>
-
-    </p>
 
     <h2>About</h2>
     <ul>
@@ -34,6 +33,14 @@
                 Jean-Luc Guermond</a> </li>
     </ul>
 
+    <h2>Biography:</h2>
+    <p>I was born in Wyoming and was raised across the border in Sturgis South Dakota. In high school, I was active in
+        music, theather, speech and debate, and Boy Scouts. After high school, I took a gap year and worked in the
+        Senate as an intern in Washington D.C. I worked for Senators John Thune (SD) and Steve Daines (MT). I then
+        attended the University of South Dakota (Go Yotes!) where I double majored in mathematics and philosophy. Now I
+        am a Ph.D. student in mathematics at Texas&nbsp;A&amp;M&nbsp;University under the supervision of Dr. Jean-Luc
+        Guermond. My life's passion is solving problems with logic and reason, and I think mathematics is one of best
+        ways of doing so.</p>
 
     <h2>Contact</h2>
     <ul>
@@ -42,6 +49,10 @@
         </li>
     </ul>
 
+
+    <footer>
+        <p id="footnote"> Website last updated: March 2024.</p>
+    </footer>
 
 </body>
 
