--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li> <a href="selected_works.html">Selected Works</a></li>
             <li> <a href="software.html">Software & Codes</a></li>
             <li> <a href="for_professionals.html">For Employers</a></li>
+            <li> <a href="book_reviews.html">Book Reviews</a></li>
         </ul>
     </nav>
 
