--- a/book_reviews.html
+++ b/book_reviews.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <title>Book Review</title>
+</head>
 
 <body>
 
     <nav>
         <ul>
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="selected_works.html">Selected Works</a></li>
-            <li> <a href="software.html">Software & Codes</a></li>
-            <li> <a href="for_professionals.html">For Employers</a></li>
-            <li> <a href="book_reviews.html">Book Reviews</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="selected_works.html">Selected Works</a></li>
+            <li><a href="software.html">Software &amp; Codes</a></li>
+            <li><a href="for_professionals.html">For Employers</a></li>
+            <li><a href="book_reviews.html">Book Reviews</a></li>
         </ul>
     </nav>
 
@@ -16,42 +21,62 @@
     <h2><em>Foundryside</em> by Robert Jackson Bennett</h2>
     <h3>Category: Fantasy</h3>
     <h3>Rating: 8.5/10</h3>
-    <par>This book surprised me. Calling it "magic" is a bit of a misnomer. A better description
-        would be magic-based sci-fi. The premise is following: objects can be altered by writing on them (called
-        <em>scriving</em>)
-        which changes their reality. For example: someone could take a lumber beam, scrive it with sigils that tell it
-        it's made of iron, and
-        then the beam now behaves as if it was made of iron.
-
-        While the foundation of the story is a kind of magic, its functionality is sci-fi. These sigils can be
+    <p>
+        I came back to fantasy after a year-long or so dive into murder-mysteries and thrillers.
+        <em>Foundryside</em> caught my eye because it seemed to be below the radar but still drew attention.
+        That's a green flag to me: enough substance to garner praise but not too routine so that everyone seems to
+        enjoy it. (I'm looking at you ACOTAR.) What sealed my purchase was its seemingly new magic system.
+        So I picked up <em>Foundryside</em> (for a decent price, I might add).
+    </p>
+    <p>
+        Now at the end, I can say that <em>Foundryside</em> is a strong addition to anyone's fantasy collection. It isn't
+        groundbreaking, but it does stand out from its contemporary peers in one important aspect: the magic system.
+        As someone who deals with computer science and programming, I was captured by the magic system's resemblance
+        to computer coding and the culture around it. Anyone in computer science should read this book; anyone who
+        thinks computer science poses deep questions should read this book. I fully intend to finish this series solely
+        because I want to know more about the magic of <em>Foundryside</em> called <em>scriving</em>.
+    </p>
+    <p>
+        Calling it "magic" is a bit of a misnomer. The book isn't fantasy in a Harry Potter or LOTR sense. A better
+        description would be magic-based sci-fi. The premise is the following: objects can be altered by writing sigils
+        on them.
+        These sigils "persuade" the object. For example, someone could take a lumber beam, scrive it with sigils that
+        tell it
+        it's made of iron, and then the beam now believes—and thus behaves as if—it was made of iron. This process is
+        called <em>scriving</em>;
+        people who practice scriving are called scrivers. So while the foundations are magical—we don't know why
+        scriving works and
+        it's akin to writing spells—the functionality of the novel is sci-fi.
+        Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these definitions
+        in an object in order to use it. It's like defining a dictionary or class in Python or C++. These sigils can be
         <em>hacked</em>: certain characters
         can "talk" to scrived objects, listen to the logic of their sigils, then twist the meaning to make the scrived
         objects do something they weren't meant to.
-        As a programmer, this plot device was immensely interesting. People who know how to write these sigils are
-        called <em>scrivers</em>, and they essentially are like
-        computer programmers: they think about how to combine different sigils and "words" to have a desired effects.
-        They have massive objects called <em>lexicons</em> to
-        define new sigils, but it only has a limited range of effectiveness. It's like having a library of functions in
-        python or C++!
-
-        One thing this book does remarkably well is build the world through plot. One of my major pet-peeves with fantasy 
-        novels is building the world through exposition dumps. It feels like reading a textbook, and I read books to avoid 
-        scholastic activities. But <em>Foundryside</em> does an excellent job of showing the reader the world through the plot: 
-        the magic is explained by exploring its impacts in the world. We learn of the ability to hack scrived objects because 
-        the main character needs to break a lock. We learn about the lore through its influence on characters decisions and motivations. 
-
-        The main character was "scrived." It reminds the reader of contemporary concerns like micro-chipping human minds. 
-
-        The actually writing was innovative. The way characters talk with scrived devices was entertaining and engaging.
+    </p>
+    <p>
+        So the idea is fresh and original, but the novel takes this framework and incorporates contemporary concerns regarding
+        technology. We worry about bio-tech and how we might modify our bodies with computers; characters in the novel have been scrived
+        and have "powers" because of it. All the rage in the scientific community is AI and machine learning; some objects have such complicated
+        scriving that they begin to have their own personality (some have a complete personality, but why is part of the story).
+    </p>
+    <p>
+        The world is rich and has subtle references to modern trends and problems. But that means there's potential, not that as a story, it works well.
+        But even here Patterson is solid. He expertly avoids the kiss of death for fantasy novels: build the world via gobs and gobs of exposition. It kills the
+        narration, bringing the plot to a screeching halt so we can and read a textbook. Patterson does not do this. He builds the world through the plot. We learn
+        about the rules and loopholes of scriving because the characters must grapple with them and their consequences. We learn that scrives can be "hacked" because a character
+        needs to break into a camp. We learn about these lexicons—the sigil dictionaries—and their drawbacks because they need to use one in the climax.  The actual writing was engaging.
+        The way characters talk with scrived devices was entertaining.
         The way some objects were loud and obnoxious while others have charisma and personality added a depth to the
-        scriving mechanic that I was not expecting.
-
-        In short: the world building was fresh and innovative. The magic was constructed in such a way to not be 
-        magic in the traditional sense, but to function more in a technological way. It allows the characters to live in a world
-        with rapiers, crossbows, and fortresses, but wrestle with issues that echo our very real questions regarding AI, coding, hacking, and 
-        bio-tech. The characters are engaging, though a bit derivative at times.
-
-
-    </par>
-
-</body>
+        scriving mechanic that I was not expecting. The ability of Patterson to explore scientific ideas with narrative that was both technical and entertaining makes this novel pop. It's not the
+        first book I've read that does world-building well, but it is the first I've encountered that uses magic to build up a technological world. For that, it deserves credit.
+    </p>
+    <p>Now, it's not perfect. Sometimes the vocabulary was mediocre. I am a sucker for deep, rich descriptions of the world. I want the author to paint me a picture and use a massive palette to do so.
+        This was the palette of an undergraduate or an early graduate student. It doesn't lose points for the vocabulary, but it doesn't gain any either. Some of the characters seem
+        to be conforming to modern clichés, i.e., the main character is a young woman with a troubled past who has a unique set of skills (in this case, she's a thief). They don't detract from the story
+        but that's because the story is more about the scriving than it is about any one particular character. It just seems like these clichés are slid into the plot because... well, there is no because, and
+        that's the problem. But, like I said, it doesn't detract, only distract for a moment or two.
+    </p>
+    <p><em>Foundryside</em> is a magic-based sci-fi novel that promises readers a well-built world that is explored through effective storytelling. At roughly three-hundred pages, it's a pleasant read that
+        doesn't waste time getting to the point. It manages to emulate real technological problems while still helping us escape to a different reality. The characters can be a bit derivative but
+        serve their purpose while being colorful but not loud. The plot is grand without being obnoxious. The magic-but-technology system is what brings this novel to life, and it deserves a spot on any lover of
+        science fiction or fantasy's bookshelf.
