--- a/book_reviews.html
+++ b/book_reviews.html
@@ -48,7 +48,7 @@
         scriving works and
         it's akin to writing spells—the functionality of the novel is sci-fi.
         Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these definitions
-        in an object in order to use it. It's like defining a dictionary or class in Python or C++. These sigils can be
+        in an object called a <em>lexicon</em> in order to use it. It's like defining a dictionary or class in Python or C++. These sigils can be
         <em>hacked</em>: certain characters
         can "talk" to scrived objects, listen to the logic of their sigils, then twist the meaning to make the scrived
         objects do something they weren't meant to.
