Added review for Pale Blue Eye

--- a/book_reviews.html
+++ b/book_reviews.html
@@ -18,9 +18,46 @@
     </nav>
 
     <h1>2024</h1>
+    <h2><em>The Pale Blue Eye</em> by Louis Bayard</h2>
+    <h3>Category: Mystery/Thriller</h3>
+    <h3>Rating: 8/10</h3>
+    <p>
+        I know very little about Edgar Allan Poe, and to be frank, I think that made reading this book all the much
+        better. It kept the characters and plot fresh--I had no clues to direct my literary investigations. But this book 
+        was excellent. Now, to be honest, writing this review is difficult, because the novel does such a wonderful job 
+        of hiding <em>itself</em> from the reader that I find myself biting my tongue out of fear of giving it all away. 
+        The last seventy-five or so pages is a tour-de-force in thriller writing. There is enough in the preceeding pages to make the 
+        ending <em>possible</em> but not so much as it make it <em>necessary</em> and therefore predictable.
+    </p>
+    <p>
+        One thing to be aware of: this novel is not, stricly speaking, a murder mystery. It does not follow the Holmes/Poirot style of 
+        mystery, investigation, and brilliant reveal where all the pieces fall into perfect place and we the reader feel a tinge dumber for 
+        not realizing it ourselves. But it doesn't need to; this story is not about putting the pieces together. It is not about catching all the subtle 
+        clues. I could feel myself falling into that trap. I was beginning to worry that this was going to end up like so many mystery novels do: the investigator 
+        "solves" the mystery not through wit or keen investigation skills, but because the mystery solves itself through lucky encounters, last minute epiphanies, and 
+        seeing the bad guy at the right time. (Personally this is a cardinal sin in murder-mystery writing.) But at the end, when I put the book down, a grin crawled upon my face
+        because it had tricked me. I thought it was going to commit this terrible literary sin, but it was I who committed the sin of being too proud to see what was going on 
+        the whole time. The pieces that came together weren't clues found at a crime scene; they were the literary devices and tools used by Mr. Bayard to masterful effect. 
+        For that display alone, this book deserves applause. 
+    </p>
+    <p>
+        On more techincal aspects, Bayard does well. His use of language does transfix the reader in early ninetheenth century New York. The customs of early America can be seen, and the dialogue 
+        is exactly what I would expect to hear from early Americans. Something that stands out is how characters are distinguished by their words. Poe the character reflects Poe the poet that we all know. 
+        His words are carefully chosen to be colorful, filled with theatrics. One readily believes that this could have been a young Poe. The way the protangonist is curt demonstrates his simple but brutal 
+        detective's mind. There are times when I think Bayard tries a bit too hard to be a poet. Some of the descriptions I found to be more nonsense than creative: my mind couldn't put together the imagery 
+        being lost in the verse. But these instances are few and may be readily forgiven. I would also be remiss if I failed to mention the sheer horrific descriptions of the crimes at play. The echoes of Poe's horror 
+        resonate well in these pages. On the whole, the linguistic talents of Mr. Bayard bring the characters, setting, and plot to life in vivid detail, though sometimes 
+        the details love themselves a bit too much. And yet, perhaps that's just my un-poetical mind not being able to see the colors in the landscape. 
+    </p>
+    <p><em>The Pale Blue Eye</em> is a must-read for anyone looking for a mind-bending, fresh take on the murder-mystery novel. Yes, the book involves a young Edgar Allan Poe, but its goals are far loftier than merely 
+        bringing to life the esteemed poet. It isn't what you think. And it isn't what you think next either. The ending will stay with me for a long time, and in a way, it was something I was starving for from this genre. 
+        It's a shame I can't tell you what that hunger was, because it would spoil the feast Mr. Bayard has prepared for us. 
+    </p>
+
+
     <h2><em>Foundryside</em> by Robert Jackson Bennett</h2>
     <h3>Category: Fantasy</h3>
-    <h3>Rating: 8.5/10</h3>
+    <h3>Rating: 7/10</h3>
     <p>
         I came back to fantasy after a year-long or so dive into murder-mysteries and thrillers.
         <em>Foundryside</em> caught my eye because it seemed to be below the radar but still drew attention.
@@ -29,7 +66,8 @@
         So I picked up <em>Foundryside</em> (for a decent price, I might add).
     </p>
     <p>
-        Now at the end, I can say that <em>Foundryside</em> is a strong addition to anyone's fantasy collection. It isn't
+        Now at the end, I can say that <em>Foundryside</em> is a strong addition to anyone's fantasy collection. It
+        isn't
         groundbreaking, but it does stand out from its contemporary peers in one important aspect: the magic system.
         As someone who deals with computer science and programming, I was captured by the magic system's resemblance
         to computer coding and the culture around it. Anyone in computer science should read this book; anyone who
@@ -47,36 +85,56 @@
         people who practice scriving are called scrivers. So while the foundations are magical—we don't know why
         scriving works and
         it's akin to writing spells—the functionality of the novel is sci-fi.
-        Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these definitions
-        in an object called a <em>lexicon</em> in order to use it. It's like defining a dictionary or class in Python or C++. These sigils can be
+        Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these
+        definitions
+        in an object called a <em>lexicon</em> in order to use it. It's like defining a dictionary or class in Python or
+        C++. These sigils can be
         <em>hacked</em>: certain characters
         can "talk" to scrived objects, listen to the logic of their sigils, then twist the meaning to make the scrived
         objects do something they weren't meant to.
     </p>
     <p>
-        So the idea is fresh and original, but the novel takes this framework and incorporates contemporary concerns regarding
-        technology. We worry about bio-tech and how we might modify our bodies with computers; characters in the novel have been scrived
-        and have "powers" because of it. All the rage in the scientific community is AI and machine learning; some objects have such complicated
-        scriving that they begin to have their own personality (some have a complete personality, but why is part of the story).
+        So the idea is fresh and original, but the novel takes this framework and incorporates contemporary concerns
+        regarding
+        technology. We worry about bio-tech and how we might modify our bodies with computers; characters in the novel
+        have been scrived
+        and have "powers" because of it. All the rage in the scientific community is AI and machine learning; some
+        objects have such complicated
+        scriving that they begin to have their own personality (some have a complete personality, but why is part of the
+        story).
     </p>
     <p>
-        The world is rich and has subtle references to modern trends and problems. But that means there's potential, not that as a story, it works well.
-        But even here Patterson is solid. He expertly avoids the kiss of death for fantasy novels: build the world via gobs and gobs of exposition. It kills the
-        narration, bringing the plot to a screeching halt so we can and read a textbook. Patterson does not do this. He builds the world through the plot. We learn
-        about the rules and loopholes of scriving because the characters must grapple with them and their consequences. We learn that scrives can be "hacked" because a character
-        needs to break into a camp. We learn about these lexicons—the sigil dictionaries—and their drawbacks because they need to use one in the climax.  The actual writing was engaging.
+        The world is rich and has subtle references to modern trends and problems. But that means there's potential, not
+        that as a story, it works well.
+        But even here Patterson is solid. He expertly avoids the kiss of death for fantasy novels: build the world via
+        gobs and gobs of exposition. It kills the
+        narration, bringing the plot to a screeching halt so we can and read a textbook. Patterson does not do this. He
+        builds the world through the plot. We learn
+        about the rules and loopholes of scriving because the characters must grapple with them and their consequences.
+        We learn that scrives can be "hacked" because a character
+        needs to break into a camp. We learn about these lexicons—the sigil dictionaries—and their drawbacks because
+        they need to use one in the climax. The actual writing was engaging.
         The way characters talk with scrived devices was entertaining.
         The way some objects were loud and obnoxious while others have charisma and personality added a depth to the
-        scriving mechanic that I was not expecting. The ability of Patterson to explore scientific ideas with narrative that was both technical and entertaining makes this novel pop. It's not the
-        first book I've read that does world-building well, but it is the first I've encountered that uses magic to build up a technological world. For that, it deserves credit.
+        scriving mechanic that I was not expecting. The ability of Patterson to explore scientific ideas with narrative
+        that was both technical and entertaining makes this novel pop. It's not the
+        first book I've read that does world-building well, but it is the first I've encountered that uses magic to
+        build up a technological world. For that, it deserves credit.
     </p>
-    <p>Now, it's not perfect. Sometimes the vocabulary was mediocre. I am a sucker for deep, rich descriptions of the world. I want the author to paint me a picture and use a massive palette to do so.
-        This was the palette of an undergraduate or an early graduate student. It doesn't lose points for the vocabulary, but it doesn't gain any either. Some of the characters seem
-        to be conforming to modern clichés, i.e., the main character is a young woman with a troubled past who has a unique set of skills (in this case, she's a thief). They don't detract from the story
-        but that's because the story is more about the scriving than it is about any one particular character. It just seems like these clichés are slid into the plot because... well, there is no because, and
+    <p>Now, it's not perfect. Sometimes the vocabulary was mediocre. I am a sucker for deep, rich descriptions of the
+        world. I want the author to paint me a picture and use a massive palette to do so.
+        This was the palette of an undergraduate or an early graduate student. It doesn't lose points for the
+        vocabulary, but it doesn't gain any either. Some of the characters seem
+        to be conforming to modern clichés, i.e., the main character is a young woman with a troubled past who has a
+        unique set of skills (in this case, she's a thief). They don't detract from the story
+        but that's because the story is more about the scriving than it is about any one particular character. It just
+        seems like these clichés are slid into the plot because... well, there is no because, and
         that's the problem. But, like I said, it doesn't detract, only distract for a moment or two.
     </p>
-    <p><em>Foundryside</em> is a magic-based sci-fi novel that promises readers a well-built world that is explored through effective storytelling. At roughly three-hundred pages, it's a pleasant read that
-        doesn't waste time getting to the point. It manages to emulate real technological problems while still helping us escape to a different reality. The characters can be a bit derivative but
-        serve their purpose while being colorful but not loud. The plot is grand without being obnoxious. The magic-but-technology system is what brings this novel to life, and it deserves a spot on any lover of
+    <p><em>Foundryside</em> is a magic-based sci-fi novel that promises readers a well-built world that is explored
+        through effective storytelling. At roughly three-hundred pages, it's a pleasant read that
+        doesn't waste time getting to the point. It manages to emulate real technological problems while still helping
+        us escape to a different reality. The characters can be a bit derivative but
+        serve their purpose while being colorful but not loud. The plot is grand without being obnoxious. The
+        magic-but-technology system is what brings this novel to life, and it deserves a spot on any lover of
         science fiction or fantasy's bookshelf.
