--- a/book_reviews.html
+++ b/book_reviews.html
@@ -17,7 +17,83 @@
         </ul>
     </nav>
 
+
     <h1>2024</h1>
+    <h2><em>Empire of the Damend</em> by Jay Kristoff</h2>
+    <h3>Category: Fantasy</h3>
+    <h3>Rating: 8/10</h3>
+    <p>
+        This novel is the sequel to Kristoff's <em>Empire of the Vampire</em>, which was brought to life in 2021.
+        To be frank: Kristoff is my favorite contemporary author. His <em>Nevernight</em> series brought me back to
+        reading
+        after a friend insisted I give it a try. The world of Mia Corvere trapped me in ways no other book has done. The
+        plot, the character,
+        the world building, the magic system, to me were all top tier, and no one has come close. But what took
+        <em>Nevernight</em> to a different level
+        was Kristoff himself. I found his writing bold, willing to try new things (who knew that <em>footnotes</em>
+        would add so much to a fantasy tale). His banter
+        is unmatched; the dialogue is rich and adds a third and fourth dimensions to characters. Kristoff also does an
+        excellent job of being gritty. People die. People you care about.
+        They die in unpleasant ways. And he tells you upfront that he's going to do it. Now, it's not quite as jarring
+        or subsersive as say <em>Game of Thrones</em>, but all
+        of these elements together make for a masterful story, and it remains my favorite this day in the fantasy
+        category. If I was writing reviews back then, I would have given all three
+        novels either a 10/10 or 9/10.
+    </p>
+    <p>
+        This brings us to <em>Empire of the Vampire</em>. The first novel was also excellent. It tells the story of a Christian-like
+        empire that wages war against vampiric forces. However, there are individuals called "silversaints." These are men 
+        whose parentage is half human and half vampire. They are recruitied by the Order of San Michon (one of the saints of the religion) and 
+        trained to fight vampires. Being half vampire, they inherit some of their powers, but also their thirst. The main character, Gabriel de Leon 
+        (Kristoff makes this world French-like; <em>Nevernight</em> was Roman) is the last such silversaint. As is vintage Kristoff, you know by page one 
+        that the vampires have won, and now the blood-sucking bastards rule over the continent. The story has two layers: there is Gabriel as a captive to the 
+        vampire Empress, kept to relay his journey and knowledge of the Holy Grail to the vampire historian, Jean-Francois. The second layer is the story that Gabriel tells, which 
+        traverses parts of his lifetime, from his youth and recruitment into the order, to his discovery of the Grail. The novel (a healthy 750 pages or so) ends with Gabriel on the run 
+        with the Grail.
+    </p>
+    <p>
+        I throughly enjoyed <em>EoV</em>. It has many of the same qualities that <em>Nevernight</em> does, and I would venture to say that the world building here is 
+        even more expansive. It's also far darker, with the basic scenery being one of rot and filth. There's very little to smile at the world of de Leon. When there is, well, 
+        it's Kristoff, so don't get too attached. But he also gives you just enough to think there's more going on. But only just. The way Gabriel talks with his captors, they way he 
+        seems remarkably calm for someone who fought his wholes life for, what now, is nothing. When I put it down, I could not wait for the sequel. But wait I did (three years people, three!). 
+    </p>
+
+    <p>
+        I picked up <em>Empire of the Damned</em> the day it was released. I was finishing <em>Pale Blue Eye</em> at the time, but as soon as I did, I plunged once again into the world of de Leon. At again 
+        750 pages, it was a solid read. But it went by quick---at least it felt that way. It picks up right where <em>EoV</em> left off, and the pace does not slow down. 
+
+        I think, however, that <em>Empire of the Damned</em> is a weaker addition. There are a few reasons for this view. First, I felt that the plot became too narrow: for such a large world, all of the events take place in a single 
+        country against one faction of vampires, and it's not even the main big bad from the first novel. There were a few ex machina's---both in characters that died-but-didn't and other mechanisms---that were so obivous, I felt nothing when
+        they were revealed. For example: two characters have similar backstories with this vampire faction, but one is good and the other bad. They'll probably show up at the last second in the climax and fight. And voila! There it is! On the flip side, 
+        some of the betrayals we less betrayals and the character not opening their eyes to the obvious. More than once, I was yelling "No shit Sherlock! Why did you not think of that?" Now, there are times when the reader knows something is wrong. 
+        Often this is intentional, and the writer completely intends for it. It's like the subtle hints and clues that I was referring to earlier. Your mind knows something lurks in the shadows of the plot, but you put up your guard as your hair stands on end. 
+        There are times when Kristoff pulls this effect off well. Other times, it's less shadows-in-the-dark and more actors-at-a-frat-haunted-house. I see you. I know you're going to pop out. Do you see my shock and surprise? No? Dang. 
+
+        There were also moments when the "boss" didn't live up to my expectations. In <em>EoV</em>, there is one vampire who pursues Gabriel and company, and it is very clear that this beast is 
+        not to be trifled with. Kristoff makes that clear by not just saying so, but showing the reader that this vampire means certain death. He is terrifying, and you genuinely worry for the characters' survival. 
+        That was less so the case with some of the vampires in <em>EoD</em>: a lot of talk, but the action did not reflect the expectations. I didn't feel same fear and suspense that I did in <em>EoV</em>. Now, there are some vampires, that filled me with dread. But 
+        that was less so for their strength---something that would heighten a fight scene---and more so for their ability to manipulate and twist. I will give a lot of credit: Kristoff does an excellent job showing how sexual forces and charismatic abilities are just 
+        as dangerous as skill with a sword. In some contexts, it far more lethal. That dynamic shines in <em>EoD</em>, whereas the warrior dynamic is more present in <em>EoV</em>. 
+        
+        Now, if these novel is so terrible, why am I giving it a 8/10? The answer is two-fold.
+        One: it's still a great read. Kristoff still shines, and the clues and hints in <em>EoV</em> are beginning to add up. (Though I worry, like I referred to, that it might be 
+        a hair too obvious). There are still subversions that are expertly executed; conspiracies and betrayals that add wonderful tension. And let's not forget that this world Kristoff has built is still hopeless. The faction of 
+        vampires that Gabriel wars with is unlike anything I've seen put to the page or screen when it comes to classical monsters. Some of the scenes still make me squirm; some of the blood-shed still makes me wince. Again: Kristoff is daring, not afraid 
+        to make blood-sucking, murdering, creatures of the never-ending night as raw and gruesome as his dark imagination can conceive. In a way, if the first book set the big picture for this world, the second zooms in on a particular set of 
+        vampires in a particular part of that world, and we see every rotting part of it. The banter is still solid, though not as original as in the first novel. A few action scenes still maintain a degree of scale and raw power, though I wish they were longer or there were more of them. There is a massive
+        battle scene, but, as I said, it lacks the same level of tension that I've seen from Kristoff. Kristoff also is a master of subtly woving in quite mature themes without being obnoxious. For exmaple, I think that the romance in this book is wonderful. I can't say I was expecting that. But it touches on themes of loss and redemption in ways that I wish other 
+        writers would consider. Questions of faith from the first novel carry over into the second. However, in the first, I found the commentary to be rudimentary; the second adds a delicious new dimension the theme of faith and religion, though it comes towards the end. 
+        Two: if I appear over-critical, it's simply because my expectations for Kristoff are so high. This is the man that made me fall desperately in love with reading. Kristoff set my standard for modern fantasy and fiction---
+        if it's too high, then it's his own damn fault. Perhaps most importantly, Kristoff is setting up for an excellent third book (but please please please don't make me wait another three years for it. No I am not patient, so stop asking me to be). The two layers I referred to are 
+        both heading in an exciting directions. Those small hints and clues from the first book are already starting to pay off, and a careful, thoughtful reader will already have a ideas of what's at play, especially in the first layer. There are still
+        critical questions that are left unanswered. Actually, one of my worries is that Kristoff has set up <em>too</em> much, and one book won't be enough to satisfactorily finish each of the plot lines (I don't want a second <em>Kingdom of Ash</em>; ask me about <em>that</em> if you want to know how to 
+        imporerly end an epic saga). But, if <em>Nevernight</em> is any reliable guide, then Kristoff will pull it all off in ways only he can, and I will somehow read 500+ pages in a day because I simply can't put it down. 
+        All in all, I think <em>Empire of the Damned</em> has some uncharacteristic weaknesses. But they are uncharacteristic because Kristoff is such a strong fantasy writer. To be fair, the second entry in the <em>Nevernight</em> triology was also the weakest in my mind (this is a hotly contested point amongst myself and my reading friends). So perhaps there's just something 
+        with me and Kristoff-second-entries. But the story still brings the reader to a bleak, helpless world where we are the blood-filled meat sacks. There is no respect for humanity. Vampires don't hide in the shadows: they tear down castle walls and hang their victims from the ceilings in celebration. Nowhere feels safe. Mercy is as rare as the sun. The reader still feels like every 
+        scrap of hope is vaporized before it can reach our fingertips. Kristoff still makes this world our reality. There are just a few moments when we can relax because we know what's coming. 
+    </p>
+
+
     <h2><em>Foundryside</em> by Robert Jackson Bennett</h2>
     <h3>Category: Fantasy</h3>
     <h3>Rating: 8.5/10</h3>
@@ -29,7 +105,8 @@
         So I picked up <em>Foundryside</em> (for a decent price, I might add).
     </p>
     <p>
-        Now at the end, I can say that <em>Foundryside</em> is a strong addition to anyone's fantasy collection. It isn't
+        Now at the end, I can say that <em>Foundryside</em> is a strong addition to anyone's fantasy collection. It
+        isn't
         groundbreaking, but it does stand out from its contemporary peers in one important aspect: the magic system.
         As someone who deals with computer science and programming, I was captured by the magic system's resemblance
         to computer coding and the culture around it. Anyone in computer science should read this book; anyone who
@@ -47,36 +124,56 @@
         people who practice scriving are called scrivers. So while the foundations are magical—we don't know why
         scriving works and
         it's akin to writing spells—the functionality of the novel is sci-fi.
-        Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these definitions
-        in an object called a <em>lexicon</em> in order to use it. It's like defining a dictionary or class in Python or C++. These sigils can be
+        Scrivers combine sigils to create new sigils: they define a new sigil. But they have to collect these
+        definitions
+        in an object called a <em>lexicon</em> in order to use it. It's like defining a dictionary or class in Python or
+        C++. These sigils can be
         <em>hacked</em>: certain characters
         can "talk" to scrived objects, listen to the logic of their sigils, then twist the meaning to make the scrived
         objects do something they weren't meant to.
     </p>
     <p>
-        So the idea is fresh and original, but the novel takes this framework and incorporates contemporary concerns regarding
-        technology. We worry about bio-tech and how we might modify our bodies with computers; characters in the novel have been scrived
-        and have "powers" because of it. All the rage in the scientific community is AI and machine learning; some objects have such complicated
-        scriving that they begin to have their own personality (some have a complete personality, but why is part of the story).
+        So the idea is fresh and original, but the novel takes this framework and incorporates contemporary concerns
+        regarding
+        technology. We worry about bio-tech and how we might modify our bodies with computers; characters in the novel
+        have been scrived
+        and have "powers" because of it. All the rage in the scientific community is AI and machine learning; some
+        objects have such complicated
+        scriving that they begin to have their own personality (some have a complete personality, but why is part of the
+        story).
     </p>
     <p>
-        The world is rich and has subtle references to modern trends and problems. But that means there's potential, not that as a story, it works well.
-        But even here Patterson is solid. He expertly avoids the kiss of death for fantasy novels: build the world via gobs and gobs of exposition. It kills the
-        narration, bringing the plot to a screeching halt so we can and read a textbook. Patterson does not do this. He builds the world through the plot. We learn
-        about the rules and loopholes of scriving because the characters must grapple with them and their consequences. We learn that scrives can be "hacked" because a character
-        needs to break into a camp. We learn about these lexicons—the sigil dictionaries—and their drawbacks because they need to use one in the climax.  The actual writing was engaging.
+        The world is rich and has subtle references to modern trends and problems. But that means there's potential, not
+        that as a story, it works well.
+        But even here Patterson is solid. He expertly avoids the kiss of death for fantasy novels: build the world via
+        gobs and gobs of exposition. It kills the
+        narration, bringing the plot to a screeching halt so we can and read a textbook. Patterson does not do this. He
+        builds the world through the plot. We learn
+        about the rules and loopholes of scriving because the characters must grapple with them and their consequences.
+        We learn that scrives can be "hacked" because a character
+        needs to break into a camp. We learn about these lexicons—the sigil dictionaries—and their drawbacks because
+        they need to use one in the climax. The actual writing was engaging.
         The way characters talk with scrived devices was entertaining.
         The way some objects were loud and obnoxious while others have charisma and personality added a depth to the
-        scriving mechanic that I was not expecting. The ability of Patterson to explore scientific ideas with narrative that was both technical and entertaining makes this novel pop. It's not the
-        first book I've read that does world-building well, but it is the first I've encountered that uses magic to build up a technological world. For that, it deserves credit.
+        scriving mechanic that I was not expecting. The ability of Patterson to explore scientific ideas with narrative
+        that was both technical and entertaining makes this novel pop. It's not the
+        first book I've read that does world-building well, but it is the first I've encountered that uses magic to
+        build up a technological world. For that, it deserves credit.
     </p>
-    <p>Now, it's not perfect. Sometimes the vocabulary was mediocre. I am a sucker for deep, rich descriptions of the world. I want the author to paint me a picture and use a massive palette to do so.
-        This was the palette of an undergraduate or an early graduate student. It doesn't lose points for the vocabulary, but it doesn't gain any either. Some of the characters seem
-        to be conforming to modern clichés, i.e., the main character is a young woman with a troubled past who has a unique set of skills (in this case, she's a thief). They don't detract from the story
-        but that's because the story is more about the scriving than it is about any one particular character. It just seems like these clichés are slid into the plot because... well, there is no because, and
+    <p>Now, it's not perfect. Sometimes the vocabulary was mediocre. I am a sucker for deep, rich descriptions of the
+        world. I want the author to paint me a picture and use a massive palette to do so.
+        This was the palette of an undergraduate or an early graduate student. It doesn't lose points for the
+        vocabulary, but it doesn't gain any either. Some of the characters seem
+        to be conforming to modern clichés, i.e., the main character is a young woman with a troubled past who has a
+        unique set of skills (in this case, she's a thief). They don't detract from the story
+        but that's because the story is more about the scriving than it is about any one particular character. It just
+        seems like these clichés are slid into the plot because... well, there is no because, and
         that's the problem. But, like I said, it doesn't detract, only distract for a moment or two.
     </p>
-    <p><em>Foundryside</em> is a magic-based sci-fi novel that promises readers a well-built world that is explored through effective storytelling. At roughly three-hundred pages, it's a pleasant read that
-        doesn't waste time getting to the point. It manages to emulate real technological problems while still helping us escape to a different reality. The characters can be a bit derivative but
-        serve their purpose while being colorful but not loud. The plot is grand without being obnoxious. The magic-but-technology system is what brings this novel to life, and it deserves a spot on any lover of
+    <p><em>Foundryside</em> is a magic-based sci-fi novel that promises readers a well-built world that is explored
+        through effective storytelling. At roughly three-hundred pages, it's a pleasant read that
+        doesn't waste time getting to the point. It manages to emulate real technological problems while still helping
+        us escape to a different reality. The characters can be a bit derivative but
+        serve their purpose while being colorful but not loud. The plot is grand without being obnoxious. The
+        magic-but-technology system is what brings this novel to life, and it deserves a spot on any lover of
         science fiction or fantasy's bookshelf.
