--- a/book_reviews.html
+++ b/book_reviews.html
@@ -100,7 +100,7 @@
     </p>
 
 
-    <h2><em>Empire of the Damend</em> by Jay Kristoff</h2>
+    <h2><em>Empire of the Damned</em> by Jay Kristoff</h2>
     <h3>Category: Fantasy</h3>
     <h3>Rating: 8/10</h3>
     <p>
