--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 
 <body>
-
     <nav>
         <ul>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="selected_works.html">Selected Works</a></li>
             <li> <a href="software.html">Software & Codes</a></li>
             <li> <a href="for_professionals.html">For Employers</a></li>
-            <li> <a href="book_reviews.html">Book Reviews</a></li>
+            <li> <a href="writings.html">Wrtings</a></li>
         </ul>
     </nav>
 
@@ -27,7 +26,7 @@
 
     <h2>About</h2>
     <ul>
-        <li>Year: Fourth </li>
+        <li>Year: Sixth </li>
         <li>Research Interests: Numerical Analysis, finite element methods, conservation laws, dispersive PDEs,
             mathematical biology, dynamical systems, verification </li>
         <li>Advisor: <a href="https://people.tamu.edu/~guermond/">Dr.
@@ -43,6 +42,14 @@
         Guermond. My life's passion is solving problems with logic and reason, and I think mathematics is one of best
         ways of doing so.</p>
 
+    <h2>Hobbies:</h2>
+    <p>
+        <li>Reading</li>
+        <li>Writing</li>
+        <li>Rock climbing (bouldering specifically)</li>
+        <li>Chess</li>
+    </p>
+
     <h2>Contact</h2>
     <ul>
         <li>
@@ -50,9 +57,8 @@
         </li>
     </ul>
 
-
     <footer>
-        <p id="footnote"> Website last updated: March 2024.</p>
+        <p id="footnote"> Website last updated: January 2026.</p>
     </footer>
 
 </body>
