--- a/software.html
+++ b/software.html
@@ -10,18 +10,25 @@
         </ul>
     </nav>
 
-    <h1>
-        Finit Element Codes:<sup><a href="#footnote">1</a></sup>
-    </h1>
-    <ul>
-        <li> Korteweg de-Vries Equation (first order) </li>
-        <li> Airy equation (low and high order) </li>
-    </ul>
+    <h1>Independent Software & Codes </h1>
+    <h2>Here is a collection of software and codes that I have written independently (i.e., not as part of a
+        collaborative code base).</h2>
 
+    <h2>
+        Finite Element Codes:<sup><a href="#footnote">1</a></sup>
+    </h2>
+    <ul>
+        <li> Korteweg de-Vries Equation (first order):<a href="https://github.com/Gerbeset/kdv_first_order">github</a>
+        </li>
+        <li> Airy equation (low and high order):<a href="https://github.com/Gerbeset/KdV">github</a> (Note: I am aware
+            the
+            repo is called KDV; it solves the third-order Airy equation.)</li>
+    </ul>
 
     <footer>
         <p id="footnote"> Note that many of these codes require the <em>deal.II</em> finite element library. This
-            library can be found <a href="https://www.dealii.org/">here</a>.</p>
+            library can be found <a href="https://www.dealii.org/">here. Additionally, these repos may be private; if
+                you would like access, please feel free to email me and I'd be happy to get you the code. </a>.</p>
     </footer>
 
 </body>
